--- a/style.css
+++ b/style.css
@@ -11,20 +11,25 @@
 header {
     margin: 0 auto;
     max-width: 900px;
-    align-items: center;
     background-color: rgb(126, 134, 141);
     text-align: center;
     border: 2px;
     border-color: gold;
     border-style: double;
     border-bottom: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.3em;
+    font-weight: bold;
+    padding: 10px 0;
+    
 }
+
 
 li {
    text-decoration: none; 
    list-style-type: none;
    padding: 10px 10px;
-   text-align: center;
+   text-align: left;
 }
 
 input {
