--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     font-size: 1.3em;
     font-weight: bold;
     padding: 10px 0;
-    
+
 }
 
 
@@ -41,4 +41,9 @@ input {
     background-color: aliceblue;
     border-radius: 25px;
     padding: 0.3em 1.3em 0.3em 1.3em;
+}
+
+#testLi p{
+    display: inline-block;
+    margin-left: 50px;
 }
