--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 #taskList li {
     border-radius: 10px;
-    width: 75%;
+    width: 93%;
     position: relative;
     background-color: rgb(221, 221, 221);
     padding: 30px 20px;
@@ -64,6 +64,12 @@ body {
     text-decoration: none; 
     list-style-type: none;
     display: flex;
+    justify-content: space-between;
+    
+}
+
+li span {
+    justify-content: end;
 }
 
 #taskList {
