--- a/style.css
+++ b/style.css
@@ -1,28 +1,52 @@
-.container {
-    width: 40%;
-    top: 30%;
-    left: 50%;
-    background: white;
-    border-radius: 10px;
-    min-width: 450px;
-    position: absolute;
-    min-height: 150px;
-    transform: translate(-50%,-50%);
+*,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-
 body {
     height: 100vh;
     background-color: skyblue;
     background-image: linear-gradient(to top right, rgb(40, 106, 250), rgb(255, 255, 255));
+    display: flex;
+    min-height: min-content;
+    position: relative;
+    margin: auto;
+    
 }
 
+.container-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-/*li {
-   text-decoration: none; 
-   list-style-type: none;
-   padding: 10px 10px;
-   text-align: left;
-}*/
+.container {
+   /* width: 40%;
+   /* top: 30%;
+    left: 50%;*/
+    
+        margin: auto;
+        max-height: 100%;
+        overflow: auto;
+    
+   background: white;
+    border-radius: 10px;
+    min-width: 450px;
+    min-height: 150px;
+    
+    position: relative;
+    justify-content: center;
+    min-height: min-content;
+    margin: auto;
+    
+}
 
 .input-container {
     position: relative;
@@ -54,6 +78,10 @@ body {
     
 }
 
+#btn:hover {
+    cursor: pointer;
+}
+
 #taskList li {
     border-radius: 10px;
     width: 93%;
@@ -70,6 +98,7 @@ body {
 
 li span {
     justify-content: end;
+    
 }
 
 #taskList {
@@ -80,3 +109,8 @@ li span {
     margin-top: 10px;
     
 }
+
+li button:hover {
+    cursor: pointer;
+}
+
